src/docs/MA_dot2/HT_SaveAndLoadShow/es/1.3/index.md
---
originalUrl: 'http://help2.malighting.com/Page/MA_dot2/HT_SaveAndLoadShow/es/1.3'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="3">1.1</option>
<option value="7">1.2</option>
<option selected="selected" value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="db467172-e311-4ac1-88d1-f886ad7fede0">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_AddAndPatchFixtures/es/1.3'; " title="Go to previous page 'Add, patch, change, and delete fixtures'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_UseCommandLine/es/1.3';" title="Go to next page 'Use the command line'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

			<div class="infobox"><b>Hint:</b><br><b>New English version</b><br>The language you selected is outdated. <a href="/Topic/db467172-e311-4ac1-88d1-f886ad7fede0/en">You may want to view the more up-to-date English version?</a></div>
		
			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/16568/7'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.2</span>
			</div>
		<h1>Cómo salvar y cargar tu show</h1>

			<div class="topic-table-of-contents">
				<h2>Table of contents of this topic</h2>
				<div class="topic-toc-toggler topic-toc-toggler-hide"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').hide(); $('.topic-toc-toggler-show').show(); return false;">hide</a></div>
				<div class="topic-toc-toggler topic-toc-toggler-show" style="display: none;"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').show(); $('.topic-toc-toggler-show').hide(); return false;">show</a></div>
				<ul class="topic-toc-ul">
						<li>
							<a href="#toc_header_anchor_1">El menú&nbsp;Backup</a>
						</li>
						<li>
							<a href="#toc_header_anchor_2">Nuevo Show</a>
						</li>
						<li>
							<a href="#toc_header_anchor_3">Cargar Show</a>
						</li>
						<li>
							<a href="#toc_header_anchor_4">Eliminar Show</a>
						</li>
						<li>
							<a href="#toc_header_anchor_5">Salvar&nbsp;Show</a>
						</li>
						<li>
							<a href="#toc_header_anchor_6">Salvar&nbsp;Show&nbsp;como...</a>
						</li>
						<li>
							<a href="#toc_header_anchor_7">Cargar tu show dot2 en grandMA2</a>
						</li>
						<li>
							<a href="#toc_header_anchor_8">&nbsp;</a>
						</li>
				</ul>
			</div>

		<p>Tus shows se pueden salvar en la unidad interna de la consola dot2. Pero también se puede salvar en una unidad USB externa. Cuando tienes shows guardados puedes cargarlos en la consola y volverlos a utilizar.</p>

<a name="toc_header_anchor_1" id="toc_header_anchor_1" class="topic-toc-item"></a><h2>El menú&nbsp;Backup</h2>

<p>Todo esto se controla mediante el menú Backup. Puedes acceder a él presionando la tecla&nbsp;<span class="hardkey">Backup</span>&nbsp;. El menú tiene esta apariencia.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_BackupWindow01_1-2.png"></p>

<p><em>Imagen 1: Ventana Backup</em></p>

<p>En el centro de este menú hay cuatro botones grandes.</p>

<p>Sobre estos botones puedes ver el nombre de tu show actual cargado y la última vez que fue salvado.</p>

<p>El encoder derecho te permite elegir entre los cuatro botones.</p>

<p>Debajo de los cuatro botones aparece si hay o no conectada una unidad USB a tu consola. Si la hay, cuando salves tu show lo harás tanto en la unidad interna como en la externa.</p>

<p>Debajo de esto encuentras la función Auto Salvar. Aquí puedes elegir el intervalo de tiempo el cuál sera utilizado como una cuenta atrás para que la consola salve automáticamente tu show.</p>

<a name="toc_header_anchor_2" id="toc_header_anchor_2" class="topic-toc-item"></a><h2>Nuevo Show</h2>

<p>Pulsando el botón&nbsp;<span class="softkey">Nuevo Show</span> o usando el encoder para seleccionarlo y pulsando sobre él, se abre la ventana de Nuevo Show. Aquí puedes crear un nuevo show vacío. Tecleas en el nombre de tu nuevo show y pulsas la tecla Enter en la pantalla (la flecha hacia la izquierda con un ángulo de 90 grados) o presionas la tecla&nbsp; <span class="hardkey">Please</span>&nbsp;.</p>

<a name="toc_header_anchor_3" id="toc_header_anchor_3" class="topic-toc-item"></a><h2>Cargar Show</h2>

<p>Pulsando el botón&nbsp;<span class="softkey">Cargar Show</span>&nbsp;o usando el encoder para seleccionarlo y pulsando sobre él, se abre la ventana Cargar Show. Aquí puedes elegir con el encoder izquierdo para seleccionar la unidad&nbsp;desde la que deseas cargar un show salvado. Las opciones son la unidad interna, shows demo o la unidad USB (si está conectada). Esta lista se encuentra también en la parte izquierda de la pantalla. Los shows demo son algunos shows que ha creado MA. Se pueden usar para probar las diferentes funcionalidades en la consola sin tener que realizar el proceso de programar todo un show.</p>

<p>Una vez que has seleccionado la unidad puedes ver una lista de shows almacenados disponibles en la parte derecha de la pantalla. Puedes usar el encoder derecho para desplazarte en la lista de shows. Después puedes pulsar el encoder para cargar el show seleccionado.</p>

<a name="toc_header_anchor_4" id="toc_header_anchor_4" class="topic-toc-item"></a><h2>Eliminar Show</h2>

<p>Para eliminar un show necesitarás ir al menú Cargar Show. Aquí puedes seleccionar el show que quieres eliminar y luego presionas el icono de la papelera en la barra de título que se encuentra arriba.</p>

<p>No puedes borrar los shows demo.</p>

<a name="toc_header_anchor_5" id="toc_header_anchor_5" class="topic-toc-item"></a><h2>Salvar&nbsp;Show</h2>

<p>Pulsando el botón&nbsp;<span class="softkey">Salvar Show</span> o usando el encoder para seleccionarlo y justo después presionas el encoder, salvas tu show actual usando el nombre que ya le has dado.</p>

<div class="tip">Esto también se puede hacer cuando no estás en el menú Backup, pulsando la tecla&nbsp;<span class="hardkey">Backup</span>&nbsp;dos veces (igual que cuando haces doble click con el ratón).</div>

<a name="toc_header_anchor_6" id="toc_header_anchor_6" class="topic-toc-item"></a><h2>Salvar&nbsp;Show&nbsp;como...</h2>

<p>Pulsando el botón&nbsp;<span class="softkey">Salvar Show como...</span> o usando el encoder para seleccionarlo y apenas después presionas el encoder, se abre la ventana Salvar Show como... Aquí puedes guardar tu show con un nombre diferente. Se parece a la ventana de Nuevo Show. Básicamente es un campo de entrada de texto y el teclado en pantalla.</p>

<p>Puedes salir del menu backup presionando las teclas&nbsp;<span class="hardkey">Backup</span> , la tecla&nbsp;<span class="hardkey">Esc</span> o pulsando&nbsp;<span class="softkey">Esc</span>&nbsp;en la esquina superior izquierda. De esta manera sales del menú Backup sin realizar ningún cambio.</p>

<p>En muchas de las ventanas abiertas mediante el menú Backup tendrás un botón&nbsp;<span class="softkey">Ok</span> en la esquina superior derecha. Esto se puede usar para confirmar tu elección de nombre o selección de archivo de show para cargar.&nbsp;</p>

<p>&nbsp;</p>

<a name="toc_header_anchor_7" id="toc_header_anchor_7" class="topic-toc-item"></a><h2>Cargar tu show dot2 en grandMA2</h2>

<p>Puedes cargar tu show dot2 en una grandMA2 (desde la versión 3.1 de grandMA2 ). Una vez tu show ha sido cargado en grandMA2, entonces no podrás llevarlo de vuelta a la&nbsp;dot2.</p>

<p>La forma más sencilla es salvar tu show dot2 en una unidad USB. Luego toma ese mismo USB y conéctalo a la grandMA2. Esto creará la estructura de directorios correcta en tu unidad USB. &nbsp;Luego tienes que conectar tu unidad USB a un PC y manualmente mover o copiar el archivo del show desde la carpeta "shows" dentro de la carpeta dot2 a la carpeta "shows" dentro de la carpeta gma2. Luego conecta la unidad USB en la consola grandMA2 y carga tu archivo de show desde la unidad USB.</p>

<p>Obtendrás un show &nbsp;grandMA2 que tiene todos los datos del show de la dot2, pero todas las áreas que no estén definidas por la dot2 tendrán los valores/ajustes por defecto.</p>

<div class="restriction">Puedes cargar archivos de show de dot2 en la grandMA2 pero no un archivo de show grandMA2 en una dot2!</div>

<p>&nbsp;</p>

<a name="toc_header_anchor_8" id="toc_header_anchor_8" class="topic-toc-item"></a><h2>&nbsp;</h2>


				<br>
<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option value="3">1.1</option>
<option value="7">1.2</option>
<option selected="selected" value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="db467172-e311-4ac1-88d1-f886ad7fede0">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_AddAndPatchFixtures/es/1.3'; " title="Go to previous page 'Add, patch, change, and delete fixtures'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/HT_UseCommandLine/es/1.3';" title="Go to next page 'Use the command line'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/16568/7';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
